--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "online-bookstore-poc",
+  "name": "hct-library",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -11,11 +11,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.0.0",
+    "@angular/cdk": "^13.2.0",
     "@angular/common": "~13.0.0",
     "@angular/compiler": "~13.0.0",
     "@angular/core": "~13.0.0",
     "@angular/forms": "~13.0.0",
     "@angular/localize": "~13.0.0",
+    "@angular/material": "^13.2.0",
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
