--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@aws-amplify/ui-angular": "^2.1.1",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "angular-in-memory-web-api": "^0.13.0",
+    "aws-amplify": "^4.3.14",
     "bootstrap": "^4.5.0",
     "bootstrap-icons": "^1.7.2",
+    "cors": "^2.8.5",
+    "express": "^4.17.3",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -32,6 +37,7 @@
     "@angular-devkit/build-angular": "~13.0.3",
     "@angular/cli": "~13.0.3",
     "@angular/compiler-cli": "~13.0.0",
+    "@types/cors": "^2.8.12",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
